--- a/src/main/resources/fxml/EditCustomerView.fxml
+++ b/src/main/resources/fxml/EditCustomerView.fxml
@@ -3,21 +3,24 @@
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<BorderPane xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml"
+<BorderPane fx:id="rootPane" xmlns="http://javafx.com/javafx"
+	xmlns:fx="http://javafx.com/fxml"
 	fx:controller="de.htwsaar.prog3.carrental.controller.EditCustomerViewController">
 	<top>
-		<MenuBar prefHeight="14.0" prefWidth="1442.0" BorderPane.alignment="CENTER">
-			<menus>
-				<Menu mnemonicParsing="true" text="Spaceholder">
-				</Menu>
-			</menus>
+		<BorderPane prefHeight="25.0" prefWidth="1442.0" BorderPane.alignment="CENTER">
+			<left>
+				<GridPane alignment="center" hgap="10" vgap="10">
+					<Label fx:id="titleLabel" text="Edit Customer" GridPane.columnIndex="0"
+						GridPane.rowIndex="0" />
+				</GridPane>
+			</left>
 			<padding>
-				<Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+				<Insets left="27" right="5.0" top="12.0" />
 			</padding>
 			<BorderPane.margin>
-				<Insets top="5.0" />
+				<Insets left="27" right="5.0" top="12.0" />
 			</BorderPane.margin>
-		</MenuBar>
+		</BorderPane>
 	</top>
 	<center>
 		<GridPane alignment="center" hgap="10" vgap="10">
