--- a/src/main/resources/fxml/EditCarView.fxml
+++ b/src/main/resources/fxml/EditCarView.fxml
@@ -12,7 +12,7 @@
 		<BorderPane prefHeight="25.0" prefWidth="1442.0" BorderPane.alignment="CENTER">
 			<left>
 				<GridPane alignment="center" hgap="10" vgap="10">
-					<Label fx:id="titleLabel" text="Edit Car" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+					<Label fx:id="titleLabel" text="%car-edit-title-label" GridPane.columnIndex="0" GridPane.rowIndex="0" />
 				</GridPane>
 			</left>
 			<padding>
