--- a/src/main/resources/fxml/EditCustomerView.fxml
+++ b/src/main/resources/fxml/EditCustomerView.fxml
@@ -10,7 +10,7 @@
 		<BorderPane prefHeight="25.0" prefWidth="1442.0" BorderPane.alignment="CENTER">
 			<left>
 				<GridPane alignment="center" hgap="10" vgap="10">
-					<Label fx:id="titleLabel" text="Edit Customer" GridPane.columnIndex="0"
+					<Label fx:id="titleLabel" text="%customer-edit-title-label" GridPane.columnIndex="0"
 						GridPane.rowIndex="0" />
 				</GridPane>
 			</left>
