--- a/src/main/resources/fxml/NewEmployeeView.fxml
+++ b/src/main/resources/fxml/NewEmployeeView.fxml
@@ -9,7 +9,7 @@
 		<BorderPane prefHeight="25.0" prefWidth="1442.0" BorderPane.alignment="CENTER">
 			<left>
 				<GridPane alignment="center" hgap="10" vgap="10">
-					<Label fx:id="titleLabel" text="New Employee" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+					<Label fx:id="titleLabel" text="%employee-new-title-label" GridPane.columnIndex="0" GridPane.rowIndex="0" />
 				</GridPane>
 			</left>
 			<padding>
